Signed-off-by: recepyeni <recepyeni@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Adres:</h5>
-                        <p class="card-text">İki̇telli̇ OSB.  Çorapçılar Sanayi̇ Sitesi C Blok No 8. İki̇telli̇ Başakşehir İstanbul, Türkiye</p>
+                        <p class="card-text">İki̇telli̇ OSB.  Çorapçılar Sanayi̇ Sitesi</p>
+                        <p>C Blok No 8. İki̇telli̇ Başakşehir İstanbul, Türkiye</p>
                         <br>
                         <h5 class="card-title">Telefon:</h5>
                         <p class="card-text">0532 302 8766</p>
