--- a/index.html
+++ b/index.html
@@ -291,11 +291,16 @@
     <div class="container" style="padding-top: 70px;">
         <div class="row">
             <div class="col-md-8">
+                <div class="card-header d-md-none">
+                    <h5>İletişim</h5>
+                </div>
+                
                 <div id="map"  style="height: 400px; width: 100%;"></div>
+            
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <div class="card-header">
+                    <div class="card-header  d-none d-md-block">
                         <h5>İletişim</h5>
                     </div>
                     <div class="card-body">
