Signed-off-by: recepyeni <recepyeni@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     
@@ -11,7 +11,7 @@
     <meta property = "og: type" content = "website" />
     <meta property = "og: title" content = "MEFEY - Ramazan Yeni" />
     <meta property = "og: description" content = "Tekstil çorap üretiminde faaliyet göstermekteyiz." />
-    <meta property = "og: image" content = "img/logo.jpg" />
+    <meta property = "og: image" content = "img/iconfinder_boot_62118.ico" />
     <link rel="icon" href="img/iconfinder_boot_62118.ico" type="image/x-icon">
     <meta property = "og: url" content = "https://www.mefeycorap.com" />
     <meta property = "og: site_name" content = "MEFEY ÇORAP - RAMAZAN YENİ" /> 
