--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <meta property = "og: type" content = "website" />
-    <meta property = "og: title" content = "MEFEY - Ramazan Yeni" />
+    <meta property = "og: title" content = "MEFEY ÇORAP - RAMAZAN YENİ" />
     <meta property = "og: description" content = "Tekstil çorap üretiminde faaliyet göstermekteyiz." />
     <meta property = "og: image" content = "img/iconfinder_boot_62118.ico" />
     <link rel="icon" href="img/iconfinder_boot_62118.ico" type="image/x-icon">
