Signed-off-by: recepyeni <recepyeni@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/150" class="d-block w-100" alt="...">
+                            <img src="img/corap1.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://via.placeholder.com/500" class="d-block w-100" alt="...">
+                            <img src="img/corap2.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://via.placeholder.com/500" class="d-block w-100" alt="...">
+                            <img src="img/corap3.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
