--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         MEFEY ÇORAP
                     </h1>
                     <p class="lead my-3 pb-3">
-                        Mefey Çorap olarak 1996 yılında çorap üretimine başladık. Ürün geliştirme faaliyetlerinde modern teknolojiye uygun donanımlarımız ve uzman kadromuzla üretim tesisimizi genişleterek bugün 9.500 metrekare kapalı alana sahip modern tesislerimizde üretimimize devam etmekteyiz.
+                        Mefey Çorap olarak 2014 yılında çorap üretimine başladık. Ürün geliştirme faaliyetlerinde modern teknolojiye uygun donanımlarımız ve uzman kadromuzla üretim tesisimizi genişleterek bugün 500 metrekare kapalı alana sahip modern tesislerimizde üretimimize devam etmekteyiz.
                     </p>
                     <!-- <p class="lead mb-0">
                         <a href="#" class="text-white font-weight-bold">
@@ -254,13 +254,13 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="img/corap1.jpg" class="d-block w-100" alt="...">
+                            <img src="https://via.placeholder.com/150" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/corap2.jpg" class="d-block w-100" alt="...">
+                            <img src="https://via.placeholder.com/500" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/corap3.jpg" class="d-block w-100" alt="...">
+                            <img src="https://via.placeholder.com/500" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
