--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="card mb-4">
-                        <img src="img/corapfabrikasi.jpg" class="card-img-top img-thumbnail" alt="">
+                        <img src="img/corapfabrikasi.jpg" class="card-img-top img-thumbnail" alt="çorap fabrikası">
                         <!-- <div class="card-body">
 
                             <h4 class="card-title">Çorap Makineleri</h4>
@@ -254,13 +254,13 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/150" class="d-block w-100" alt="...">
+                            <img src="https://via.placeholder.com/150" class="d-block w-100" alt="çorap">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://via.placeholder.com/500" class="d-block w-100" alt="...">
+                            <img src="https://via.placeholder.com/500" class="d-block w-100" alt="çorap">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://via.placeholder.com/500" class="d-block w-100" alt="...">
+                            <img src="https://via.placeholder.com/500" class="d-block w-100" alt="çorap">
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
