Signed-off-by: recepyeni <recepyeni@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
             }
     </style>
 
-   
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBZQE2GPXR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KBZQE2GPXR');
+</script>
 </head>
 
 <body  data-spy="scroll" data-target="#mynavbar" data-offset="200">
