Signed-off-by: recepyeni <recepyeni@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
                         <h5>İletişim</h5>
                     </div>
                     <div class="card-body">
+                        <p class="card-text">Ramazan YENİ</p>
                         <h5 class="card-title">Adres:</h5>
                         <p class="card-text">İki̇telli̇ OSB.  Çorapçılar Sanayi̇ Sitesi</p>
                         <p>C Blok No 8. İki̇telli̇ Başakşehir İstanbul, Türkiye</p>
